--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jsonata",
-  "version": "1.8.4",
+  "name": "test-jsonata",
+  "version": "1.0.12",
   "description": "JSON query and transformation language",
   "module": "jsonata.js",
   "main": "jsonata.js",
@@ -8,7 +8,7 @@
   "homepage": "http://jsonata.org/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jsonata-js/jsonata.git"
+    "url": "https://github.com/anshikg/TestJsonata.git"
   },
   "scripts": {
     "pretest": "npm run lint",
@@ -55,7 +55,9 @@
     "mocha-lcov-reporter": "^1.3.0",
     "regenerator": "^0.14.4",
     "request": "^2.88.2",
-    "uglify-es": "^3.3.10"
+    "uglify-es": "^3.3.10",
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.0"
   },
   "engines": {
     "node": ">= 8"
