--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "test-jsonata",
-  "version": "1.0.12",
+  "name": "jsonata-anshikg",
+  "version": "1.0.1",
   "description": "JSON query and transformation language",
   "module": "jsonata.js",
   "main": "jsonata.js",
@@ -16,8 +16,7 @@
     "test": "npm run mocha",
     "posttest": "npm run check-coverage && npm run browserify && npm run minify && npm run build-es5",
     "build-es5": "npm run mkdir-dist && npm run regenerator && npm run browserify-es5 && npm run minify-es5",
-    "check-coverage": "istanbul check-coverage -statement 100 -branch 100 -function 100 -line 100",
-    "browserify": "browserify src/jsonata.js --outfile jsonata.js --standalone jsonata",
+    "check-coverage": "istanbul check-coverage -statement 100 -branch 100 -function 100 -line 100", 
     "mkdir-dist": "mkdirp ./dist",
     "regenerator": "babel src --out-dir dist --presets=@babel/env",
     "browserify-es5": "regenerator --include-runtime polyfill.js > jsonata-es5.js; browserify dist/jsonata.js --standalone jsonata >> jsonata-es5.js",
